Construir el menú interactivo - Inquirer

--- a/04_tareas_en_consola/package.json
+++ b/04_tareas_en_consola/package.json
@@ -10,7 +10,8 @@
   "author": "Kiril Pokrovskiy",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "inquirer": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
