--- a/04_tareas_en_consola/package.json
+++ b/04_tareas_en_consola/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
